Facettes + issue overflow basket

--- a/www/skins/prod/000000/prodcolor.css
+++ b/www/skins/prod/000000/prodcolor.css
@@ -1196,7 +1196,7 @@ div.diapo {
     left: 0pt;
     right: 1px;
     bottom: 0px;
-    overflow-y: hidden;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -2149,6 +2149,20 @@ H4 {
 
 /******* PROPOSALS ************************************************************/
 
+#proposals {
+    border-top: 1px solid #303030;
+    top: 87px !important;
+}
+
+#proposals ul li {
+    line-height: 17px;
+    font-size: 13px;
+}
+
+#proposals ul ul {
+    background-color: #292929;
+}
+
 #proposals *:focus{
     outline: none;
 }
@@ -2157,21 +2171,36 @@ H4 {
     background-color:  #3b3b3b;
     border: 0px none transparent;
     overflow-x: hidden;
+    padding-left: 0;
+    padding-top: 0;
 }
 
 #proposals UL.fancytree-container UL {
-    padding: 0;
-    padding-left: 6px;
-    margin-right: 30px;
+    padding: 20px 0;
     overflow: hidden;
+    width: 101%;
+}
+
+#proposals UL.fancytree-container UL li {
+    padding-left: 30px;
+    line-height: 25px;
+}
+
+#proposals UL.fancytree-container UL li:hover {
+    background-color: #4c5d84;
 }
 
 #proposals .fancytree-folder {
     font-weight: bold;
     height: 30px;
-    padding-top: 7px;
-    border-left: 4px solid #4c5d84;
+    padding-top: 13px;    
     margin-left: 0;
+    border-left: 4px solid #3b3b3b;
+    border-bottom: 1px solid #303030;
+}
+
+#proposals .fancytree-folder:hover {
+    border-left: 4px solid #4c5d84;
 }
 
 #proposals .fancytree-expander {
@@ -2211,18 +2240,20 @@ H4 {
     font-weight: normal;
     position:absolute;
     width:100px;
-    height:22px;
+    height:25px;
+    line-height: 25px;
+    vertical-align: middle;
     border-radius: 4px;
-    right:30px;
-    background-color: #606060;
-    padding-top: 3px;
-    padding-left: 4px;
-    padding-right: 4px;
+    right:28px;
+    background-color: #4c5d84;
+    padding-left: 13px;
+    padding-right: 13px;
+    margin-top: -4px;
 }
 
 #proposals .facetFilter-label {
     position:absolute;
-    left:4px;
+    left:13px;
     right: 14px;
     overflow:hidden;
     cursor: default;
@@ -2232,17 +2263,18 @@ H4 {
     position:absolute;
     width:20px;
     right: 0px;
-    background-image: linear-gradient(to right, transparent, #606060);
 }
 
 #proposals .facetFilter-closer {
     position:absolute;
-    right:5px;
+    right:13px;
     cursor: pointer;
 }
 
-#proposals .facetFilter-closer:before {
-    content: 'x';
+#proposals .facetFilter-closer {
+    background: url('../../icons/bgd_facetFilter.png') 0 5px no-repeat;
+    height: 25px;
+    width: 14px;
 }
 
 /******* /PROPOSALS ************************************************************/
